--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,51 @@
 body {
-    background-color: maroon;
-	/* Use a system font, if none are available use an available sans-sarif   font */
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-		Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-	margin: 0;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
-section.board {
-  display: grid;
-  grid-template-rows: repeat(3, 10vmin);
-  grid-template-columns: repeat(3, 10vmin);
-  grid-gap: 0vmin;
-  background-color: lightgray;
+  background-color: rgb(175, 194, 194);
+background-color: rgb(13, 77, 138);
+/* Use a system font, if none are available use an available sans-sarif   font */
+font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+  Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+margin: 0;
+align-items: center;
+height: 100vh;
+display: flex;
+flex-direction: column;
+@@ -16,23 +16,31 @@ section.board {
+grid-template-rows: repeat(3, 10vmin);
+grid-template-columns: repeat(3, 10vmin);
+grid-gap: 0vmin;
+margin:  auto;
+background-color: black;
+background-color: #000000;
+color: white;
+outline-width: thick;
+margin-top: 5px;
+box-shadow: 0 0 10px black;
 }
 
 div {
-  border: 3px solid black;
-  font-size: 8vmin;
-  text-align: center;
-  vertical-align: middle;
-  background-color: burlywood
+border: 5px solid rgb(29, 20, 20);
+border: 5px solid rgb(20, 8, 8);
+font-size: 8vmin;
+text-align: center;
+vertical-align: middle;
+
+margin-bottom: -3px;
+margin-left: -3px;
 }
+h1, h2 {
+text-align: center;
+position  -;
+h1{
+margin-top: 200px;
+border-radius: 15%;
+color: black; 
+background-color: gray;
+box-shadow: 0 0 20px blue, 0 0 5px black;
+}
+h2 {
+margin: 10px;
+}
+button { 
+vertical-align: ;
+margin-top: 20px;
+} 
