--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,23 @@
 body {
-  background-color: rgb(175, 194, 194);
+  background-color:rgb(23, 86, 158);
+/* Use a system font, if none are available use an available sans-sarif   font */
+font-family: 'Times New Roman', Times, serif
+margin: 0;
+height: 100vh;
+display: flex;
+flex-direction: column;
+}
+
+section.board {
+display: grid;
+grid-template-rows: repeat(3, 10vmin);
+grid-template-columns: repeat(3, 10vmin);
+grid-gap: 0vmin;
+background-color: lightgray;
+background-color: rgb(175, 194, 194);
 background-color: rgb(13, 77, 138);
 /* Use a system font, if none are available use an available sans-sarif   font */
-font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-  Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+font-family: 'Times New Roman', Times, serif
 margin: 0;
 align-items: center;
 height: 100vh;
@@ -23,6 +37,12 @@ box-shadow: 0 0 10px black;
 }
 
 div {
+border: 3px solid black;
+font-size: 8vmin;
+text-align: center;
+vertical-align: middle;
+background-color: rgb(65, 59, 53)
+} 
 border: 5px solid rgb(29, 20, 20);
 border: 5px solid rgb(20, 8, 8);
 font-size: 8vmin;
@@ -48,4 +68,4 @@ margin: 10px;
 button { 
 vertical-align: ;
 margin-top: 20px;
-} 
+}  
